--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 /EmMigration/nbproject/private/
 /EmMigration/build/
 /EmMigration/dist/
+/GUIFormExamples/nbproject/private/
+/GUIFormExamples/build/
+GUIFormExamples/readme.txt
+GUIFormExamples/readme.url
